bk_ida/gccida/g2/set_page_table_entry
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/set_page_table_entry/src/ggc-page.c:907:38: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
void  set_page_table_entry( void *p, page_entry_0 *entry) 
                                     ^~~~~~~~~~~~
                                     page_entry
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/set_page_table_entry/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/set_page_table_entry/src/ggc-page.c:909:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 **v2; // rdx 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/set_page_table_entry/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/set_page_table_entry/src/ggc-page.c:911:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 **v4; // rax 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/set_page_table_entry/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/set_page_table_entry/src/ggc-page.c:921:23: error: expected expression
v4 = ( page_entry_0 **)xcalloc( 1LL << ( 24 - LOBYTE( G.lg_pagesize)), 8uLL); 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/set_page_table_entry/src/ggc-page.c:921:8: error: use of undeclared identifier 'page_entry_0'
v4 = ( page_entry_0 **)xcalloc( 1LL << ( 24 - LOBYTE( G.lg_pagesize)), 8uLL); 
       ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/set_page_table_entry/src/obj/ggc-page.o] Error 1
